--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,21 @@
 language: node_js
 node_js:
   - node
+
+env:
+  global:
+    - CC_TEST_REPORTER_ID=f2639636585af567ebe1584e2ae3c3e0b61aa01607d5dfe8ce0897fae67cfadd
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+
 script:
   - make lint
   - make test
+
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT 
+
 notifications:
   email: false
